RAIN-2113 (W&S :: Public Domain Search :: Apk Alignment Issues)

--- a/web/rainmaker/packages/citizen/src/ui-views/ScreenInterface/index.scss
+++ b/web/rainmaker/packages/citizen/src/ui-views/ScreenInterface/index.scss
@@ -126,9 +126,9 @@ div[class^="MuiTooltip-tooltip"] {
     position: fixed;
     bottom: 0;
     z-index: 1;
-    /* left: 35px; */
     width: 100%;
     overflow: inherit !important;
+    left: 0 !important;
   }
   .apply-wizard-footer { button {
      /* min-width: 360px !important; */
